--- a/src/app/mobile/ui/navigation/navigation.component.scss
+++ b/src/app/mobile/ui/navigation/navigation.component.scss
@@ -13,7 +13,7 @@
 nav {
   padding: 10px 30px;
   height: $navigation-height;
-  box-shadow: 0 -1px 5px 0 #ccc;
+  box-shadow: 0 -3px 3px 0 #eee;
 }
 
 ul {
